--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,6 @@
 yarnPath: ".yarn/releases/yarn-berry.cjs"
 
-packageExtensions:
-  vue-demi@*:
-    peerDependencies:
-      "@vue/composition-api": "1.0.0-beta.25"
+# packageExtensions:
+#  vue-demi@*:
+#    peerDependencies:
+#      "@vue/composition-api": "1.0.0-beta.25"
